--- a/Target-RP-Build-11June/etc/network/wpa_supplicant.conf
+++ b/Target-RP-Build-11June/etc/network/wpa_supplicant.conf
@@ -2,13 +2,13 @@ ctrl_interface=/var/run/wpa_supplicant
 
 # WPA configuration example
 network={
-       ssid="<YOUR_SSID>"
+       ssid="NETGEAR14"
        scan_ssid=1
        proto=WPA RSN
        key_mgmt=WPA-PSK
        pairwise=CCMP TKIP
        group=CCMP TKIP
-       psk="<YOUR_PASSPHRASE>"
+       psk="12345678"
 }
 
 # WPA2 configuration example
